--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -520,6 +520,7 @@ body{
                             background-color:$white;
                             border-style:none;
                             z-index:9999;
+                            cursor:pointer;
                             @media screen and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
                                 bottom: 170px;
                             }
@@ -574,8 +575,9 @@ body{
         }
         .page-content{
             font-family: $noto;
-            font-size: 30px;
+            font-size: 50px;
             font-weight: 700;
+            text-shadow: 4px 4px $purple;
         }
     }
     .menu-trigger{
@@ -668,7 +670,7 @@ body{
                                                             -webkit-text-fill-color: $purple;
                                                             font-size: 29px;
                                                             &:hover{
-                                                                -webkit-text-fill-color: $white;
+                                                                -webkit-text-fill-color: $white !important;
                                                                 -webkit-text-stroke: 0px;
                                                             }
                                                         }
@@ -705,7 +707,7 @@ body{
                                         text-align: center;
                                         padding-top:40px;
                                         button{
-                                            
+                                            cursor:pointer;
                                             top:40px;
                                             background-color:$white;
                                             border-style:none;
@@ -833,7 +835,7 @@ body{
                                                                 -webkit-text-fill-color: $blue;
                                                                 font-size: calc(25px + (36 - 25) * ((100vw - 320px) / (1215 - 320)));
                                                                 &:hover{
-                                                                    -webkit-text-fill-color: $white;
+                                                                    -webkit-text-fill-color: $white !important;
                                                                     -webkit-text-stroke: 0px;
                                                                 }
                                                             }
