--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -43,24 +43,30 @@ body{
     font-weight: 300;
     margin: 0;
     .videowrapper{
-        float: none;
-        clear: both;
-        width: 100%;
-        
-        padding-bottom: 56.2%;
-        height: 0;
-        
-        /* Put the video in the background */
         position: fixed;
         top: 0;
         left: 0;
+        width: 100%;
+        height: 100%;
         z-index: -1;
+        pointer-events: none;
+        overflow: hidden;
+        background: url(../images/recon-start.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/recon-start.jpg', sizingMethod='scale');
+            -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/recon-start.jpg', sizingMethod='scale')";
         iframe{
+            width: 100vw;
+            height: 56.25vw; /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
+            min-height: 100vh;
+            min-width: 177.77vh; /* Given a 16:9 aspect ratio, 16/9*100 = 177.77 */
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     }
     #background-video{
