--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -83,9 +83,13 @@ body{
         position: absolute;
         bottom: 259px;
         right: 80px;
-        @media screen and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
-            bottom: 167px;
+        @media screen and (min-width:$phoneSmall) and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
+            bottom: 171px;
             right: 65px;
+        }
+        @media screen and (max-width:$phoneSmall){
+            bottom: 188px;
+            right: 31px;
         }
         img{
             width: 30px;
@@ -502,14 +506,18 @@ body{
                 right: 0;
                 bottom: 0;
                 background: $green;
-                padding: 120px 20px 0px 20px;
+                padding: 61px 20px 3px 20px;
                 border-top: 8px solid $white;
                 border-left: 8px solid $white;
-
-                @media screen and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
+                @media screen and (min-width:$phoneSmall) and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
                     bottom: 0px;
                     right: 0px;
-                    padding:  0px 15px 0px 15px;
+                    padding:  32px 15px 2px 15px;
+                }
+                @media screen and (max-width:$phoneSmall){
+                    bottom: 0px;
+                    right: 0px;
+                    padding:  32px 9px 2px 9px;
                 }
 
                 -webkit-transition: 0.5s all;
@@ -525,10 +533,14 @@ body{
                     width: 80px !important;
                     right: 35px !important;
                     top: 50% !important;
-                    transform: translateY(-50%);
-
-                    @media screen and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
-                        width: 50px !important;
+                    padding-bottom: 55px;
+                    @media screen and (min-width:$phoneSmall) and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
+                        width: 70px !important;
+                        padding-bottom: 15px;
+                    }
+                    @media screen and (max-width:$phoneSmall){
+                        width: 60px !important;
+                        padding-bottom: 15px;
                     }
                 }
             }
@@ -545,11 +557,17 @@ body{
                 position: absolute;
                 right: 64px;
                 bottom: 121px;
-                @media screen and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
+                @media screen and (min-width:$phoneSmall) and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
+                    width:15px;
+                    height:15px;
+                    right: 41px;
+                    bottom: 69px;
+                }
+                @media screen and (max-width:$phoneSmall){
                     width:12px;
                     height:12px;
-                    right: 39px;
-                    bottom: 77px;
+                    right: 37px;
+                    bottom: 65px;
                 }
             }
         }
@@ -578,8 +596,11 @@ body{
                             border-style:none;
                             z-index:9999;
                             cursor:pointer;
-                            @media screen and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
-                                bottom: 170px;
+                            @media screen and (min-width:$phoneSmall) and (max-width:$phoneWidth), screen and (max-height:$phoneHeight){
+                                bottom: 175px;
+                            }
+                            @media screen and (max-width:$phoneSmall){
+                                bottom: 160px;
                             }
                             a{
                                 font-family: $noto; 
@@ -1304,18 +1325,7 @@ body{
     }
     
 }
-::-webkit-scrollbar {
-    width: 8px;
-}
 
-::-webkit-scrollbar-track-piece  {
-    background-color: $black;
-}
-
-::-webkit-scrollbar-thumb:vertical {
-    height: 30px;
-    background-color: $pink;
-}
 
 /* @include media(''){
 
